--- a/MRegressao/RegressaoClima.ipynb
+++ b/MRegressao/RegressaoClima.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -168,20 +168,20 @@
        "4         23.8          9.0         14.3  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Carregando o dataset\n",
-    "df = pd.read_csv('dados/dados1975-2015.csv')\n",
+    "df = pd.read_csv('Mdados/dados1975-2015.csv')\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -251,8 +251,8 @@
       "Dep. Variable:            tempmax_abs   R-squared:                       0.451\n",
       "Model:                            OLS   Adj. R-squared:                  0.450\n",
       "Method:                 Least Squares   F-statistic:                     402.7\n",
-      "Date:                Mon, 13 Dec 2021   Prob (F-statistic):           8.07e-66\n",
-      "Time:                        08:14:05   Log-Likelihood:                -1064.4\n",
+      "Date:                Mon, 05 Dec 2022   Prob (F-statistic):           8.07e-66\n",
+      "Time:                        18:49:20   Log-Likelihood:                -1064.4\n",
       "No. Observations:                 492   AIC:                             2133.\n",
       "Df Residuals:                     490   BIC:                             2141.\n",
       "Df Model:                           1                                         \n",
