--- a/MRegressao/RegressaoClima.ipynb
+++ b/MRegressao/RegressaoClima.ipynb
@@ -81,6 +81,27 @@
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "261056"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Atributo size (total de registros considerando cada coluna)\n",
+    "df.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -137,7 +158,7 @@
        "4  5; 15/02/2022 13:37:00;5; 27.2;40; 34.0;35; 75...                                                                                                                                                                                                                                                                        "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,16 +362,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['n;Time;Interval;Indoor Temperature(°C);Indoor Humidity(%);Outdoor Temperature(°C);Outdoor Humidity(%);Relative Pressure(mmHg);Absolute Pressure(mmHg);Wind Speed(km/h);Gust(km/h);Wind Direction;DewPoint(°C);WindChill(°C);Hour Rainfall(mm);24 Hour Rainfall(mm);Week Rainfall(mm);Month Rainfall(mm);Total Rainfall(mm)'], dtype='object')"
+       "Index(['Time;Interval;Indoor Temperature(°C);Indoor Humidity(%);Outdoor Temperature(°C);Outdoor Humidity(%);Relative Pressure(mmHg);Absolute Pressure(mmHg);Wind Speed(km/h);Gust(km/h);Wind Direction;DewPoint(°C);WindChill(°C);Hour Rainfall(mm);24 Hour Rainfall(mm);Week Rainfall(mm);Month Rainfall(mm);Total Rainfall(mm)'], dtype='object')"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,16 +382,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "n;Time;Interval;Indoor Temperature(°C);Indoor Humidity(%);Outdoor Temperature(°C);Outdoor Humidity(%);Relative Pressure(mmHg);Absolute Pressure(mmHg);Wind Speed(km/h);Gust(km/h);Wind Direction;DewPoint(°C);WindChill(°C);Hour Rainfall(mm);24 Hour Rainfall(mm);Week Rainfall(mm);Month Rainfall(mm);Total Rainfall(mm)    object\n",
-      "dtype: object\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Time;Interval;Indoor Temperature(°C);Indoor Humidity(%);Outdoor Temperature(°C);Outdoor Humidity(%);Relative Pressure(mmHg);Absolute Pressure(mmHg);Wind Speed(km/h);Gust(km/h);Wind Direction;DewPoint(°C);WindChill(°C);Hour Rainfall(mm);24 Hour Rainfall(mm);Week Rainfall(mm);Month Rainfall(mm);Total Rainfall(mm)    object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
